Admin UI changed for orders, employees
